--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  background: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  background: var(--body_background);
+  box-shadow: 0 0 20px var(--body_shadow);
   /* border: 1px solid rgb(0, 0, 0); */
   border-radius: 20px;
   padding: 10px;
@@ -30,7 +30,7 @@
 
 .Textos {
   font-size: medium;
-  color: #000000;
+  color: var(--body_color);
   font-weight: bold;
 }
 
@@ -40,8 +40,10 @@
   resize: none;
   padding: 10px;
   border-radius: 5px;
-  border: 1px solid #00000063;
-  box-shadow: 0 0 5px #0000004d;
+  color: var(--body_color);
+  border: 1px solid #ffffff63;
+  box-shadow: 0 0 5px var(--body_shadow);
+  background: var(--body_background);
 }
 
 .DivContentIngre {
@@ -58,14 +60,16 @@
   height: 100px;
   resize: none;
   padding: 10px;
+  color: var(-body_color);
   border-radius: 5px;
-  border: 1px solid #00000063;
-  box-shadow: 0 0 5px #0000004d;
+  border: 1px solid #ffffff63;
+  box-shadow: 0 0 5px var(--body_shadow);
+  background: var(--body_background);
 }
 
 .ButtonGenerate {
   width: 100px;
-  height: 30px;
+  height: 150px;
   text-align: center;
   border-radius: 5px;
   color: white;
@@ -73,7 +77,8 @@
   font-weight: bold;
   font-size: large;
   display: flex;
-  background: green;
+  background: #1da1f2;
+  box-shadow: 0 0 5px #1da1f2;
   flex-direction: column;
   justify-content: center;
   cursor: pointer;
@@ -82,7 +87,7 @@
 
 .ButtonLoad {
   width: 100px;
-  height: 30px;
+  height: 150px;
   text-align: center;
   border-radius: 5px;
   color: white;
@@ -90,10 +95,27 @@
   font-weight: bold;
   font-size: large;
   display: flex;
-  background: rgb(128, 0, 0);
+  background: #f00000;
+  box-shadow: 0 0 5px #f00000;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.Load {
+  width: 30px;
+  height: 30px;
+  /* stroke-width: 30px; */
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .DivContentCon {
@@ -103,11 +125,11 @@
   /* background: #1da1f2; */
   gap: 10px;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: start;
 }
 
-.DivContentDescri{
+.DivContentDescri {
   display: flex;
   width: 100%;
   height: 100%;
@@ -118,17 +140,17 @@
   align-items: start;
 }
 
-.LabelTitle{
+.LabelTitle {
   font-size: x-large;
-  color: #000000;
+  color: #ffffff;
   font-weight: bold;
 }
 
-.LabelDescrip{
+.LabelDescrip {
   max-width: 300px;
   /* background: #1da1f2; */
   font-size: medium;
-  color: #000000;
+  color: #ffffff;
   font-weight: normal;
 }
 
@@ -142,8 +164,8 @@
 }
 
 .BTNGit {
-  width: 100px;
-  height: 30px;
+  width: 100%;
+  height: 40px;
   text-align: center;
   border-radius: 5px;
   color: white;
@@ -154,13 +176,19 @@
   background: #000000;
   flex-direction: column;
   justify-content: center;
+  border: 1px solid #ffffff;
   cursor: pointer;
   align-items: center;
 }
 
+.Github {
+  width: 25px;
+  height: 25px;
+}
+
 .BTNTwi {
-  width: 100px;
-  height: 30px;
+  width: 100%;
+  height: 40px;
   text-align: center;
   border-radius: 5px;
   color: white;
@@ -173,6 +201,11 @@
   justify-content: center;
   cursor: pointer;
   align-items: center;
+}
+
+.Twitter {
+  width: 25px;
+  height: 25px;
 }
 
 .DivContentRecipe {
@@ -190,18 +223,28 @@
   height: 100%;
   resize: none;
   padding: 5px;
+  color: var(--body_color);
   border-radius: 5px;
   border-color: transparent;
-  box-shadow: 0 0 5px #0000004d;
-  /* border-radius: 0px 0px 20px 0px; */
+  box-shadow: 0 0 5px var(--body_shadow);
+  background: var(--body_background);
 }
 
 @media (max-width: 700px) {
-  .App{
+  .App {
     flex-direction: column;
     height: fit-content;
   }
-  .TextRecipe{
+
+  .TextRecipe {
     height: 500px;
+  }
+
+  .ButtonGenerate {
+    height: 50px;
+  }
+
+  .ButtonLoad {
+    height: 50px;
   }
 }
